--- a/style.css
+++ b/style.css
@@ -204,8 +204,13 @@ header {
     margin: 0;
     padding: 0;
     display: flex;
+    justify-content: center;
 }
-
+@media screen and (max-width:768px) {
+    .navbar ul {
+        flex-wrap:wrap;
+    }
+}
 .navbar li {
     margin: 0;
     padding: 15px 20px;
